Testing the contact page effects

--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
             <a href="rush.html" id="nvb-rush" class="navbaritem textDecNone colWhite" data-transition="flow">RUSH</a>
             <a href="events.html" id="nvb-events" class="navbaritem textDecNone colWhite" data-transition="flow">EVENTS</a>
             <a href="members.html" id="nvb-members" class="navbaritem textDecNone colWhite" data-transition="flow">MEMBERS</a>
-            <a href="alumni.html" id="nvb-alumni" class="navbaritem textDecNone colWhite" data-transition="flow">ALUMNI</a>
+            <!--<a href="alumni.html" id="nvb-alumni" class="navbaritem textDecNone colWhite" data-transition="flow">ALUMNI</a>-->
             <a href="contact.html" id="nvb-contact" class="navbaritem textDecNone colWhite" data-transition="flow">CONTACT</a>
         </div>
     </div>
