--- a/members.html
+++ b/members.html
@@ -25,6 +25,8 @@
     <script src="js/masonry.pkgd.min.js"></script>
 
     <script type="text/javascript">
+
+
         var spData = null;
         function doData(json) {
             spData = json.feed.entry;
@@ -222,7 +224,7 @@
 <!-- Content -->
 
 
-<div class="posRel" style="margin: 35px auto 25px auto; text-align: center; min-height: 530px; min-width: 875px;width: 70%;">
+<div class="posRel" style="margin: 35px auto 25px auto; text-align: center; min-height: 530px; width: 875px;">
 
     <!-- I don't know why this needs a padding left -> Added bordRed, evens out the DIV -->
     <div id="data" class="centerText centerDiv" style="padding: 0 0 0 3px;"></div>
@@ -298,6 +300,5 @@ is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Crea
 
         });
     });
-
 </script>
 
