--- a/rush.html
+++ b/rush.html
@@ -28,15 +28,15 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel opensans" style="font-size: 20px; min-width: 900px; margin: 30px auto 25px auto; text-align: left; min-height: 500px; width: 60%;">
+<div class="posRel opensans" style="font-size: 20px; min-width: 900px; margin: 20px auto 25px auto; text-align: left; min-height: 500px; width: 60%;">
 
     <!-- Title -->
     <div class="inlineBlock" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 15px 0;">Why rush Sigma Phi Delta?</div>
 
     <!-- List of Rush Events -->
-    <div class="shadow inlineBlock floatRight vertAlignTop" style="margin-top: 20px; width: 55%; min-height: 250px; margin-left: 25px; text-align: left; padding: 10px; border: 5px solid #191919;">
+    <div class="shadow inlineBlock floatRight vertAlignTop" style="margin-top:30px; width: 500px; height: 330px; margin-left: 25px; text-align: left; padding: 0; border: 5px solid #191919;">
         <!-- Rush Flier -->
-
+        <img src="images/symbols/spdrush2016n.png" height="100%" width="100%"/>
     </div>
 
     <p>As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
