Much improved rush page

--- a/rush.html
+++ b/rush.html
@@ -21,6 +21,13 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
+    <style>
+        strong{
+            color: #767676;
+            font-weight:normal;
+        }
+    </style>
+
 </head>
 
 <body class="posRel" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0;">
@@ -39,55 +46,67 @@
         <img src="images/symbols/spdrush2016n.png" height="100%" width="100%"/>
     </div>
 
+    <div style="margin-bottom: 55px;">
     <p>As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
-    "work hard, play hard" mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
-    both a social social and professional organization. RUsh is an excellent opportunity in which anyone interested in
+    <strong>"work hard, play hard"</strong> mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
+    both a social and professional organization. Rush is an excellent opportunity in which anyone interested in
     learning more, or joining our Organization can come out and do so in a manner that gives proper insight on what we do
     , and what we stand for.</p>
+    </div>
 
+    <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
+        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
+            <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+                <div>
+                    <img src="icons/academics.png" height="150px" width="150px" class="block centerDiv"/>
+                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;">Academic Benefits</div>
+                </div>
+            </div>
+        </div>
+        <div class="inlineBlock vertAlignTop" style="padding-left: 30px;width: 70%; line-height: 24px;">
+            No one can truly understand the full perils and workload of a major except those within the major. The members of
+            Sigma Phi Delta are all within CEAS (College of Engineering and Applied Sciences), covering a solid breathe of its
+            encompassing majors. Members benefit from working along side one another <strong>garnering homework help, study aid, advice
+            on future courses</strong>, and other invaluable assistance. With many members having taken the same classes, Sigma Phi Delta
+            has comprised a <strong>bountiful database of study materials</strong> and resources on nearly <strong>every major required class</strong> and some
+            for DEC or SBC requirements. We also have strong relations with many faculty and staff around campus primarily within
+            CEAS. Our relations offer us many opportunities to learn and even engage in research.
+        </div>
+    </div>
 
-    <p style="color: #F7302F; font-family: Amaranth; font-size: 22px;">Academic Benefits </p>
-    <p>
-       No one can truly understand the full perils and workload of a major except those within the major. The members of
-        Sigma Phi Delta are all within CEAS (College of Engineering and Applied Sciences), covering a solid breathe of its
-        encompassing majors. Members benefit from working along side one another garnering homework help, study aid, advice
-        on future courses, and other invaluable assistance. With many members having taken the same classes, Sigma Phi Delta
-        has comprised a bountiful database of study materials and resources on nearly every major required class and some
-        for DEC or SBC requirements. We also have strong relations with many faculty and staff around campus primarily within
-        CEAS. Our relations offer us many opportunities to learn and even engage in research.
-    </p>
-
-    <p style="color: #F7302F; font-family: Amaranth; font-size: 22px;">Professional Benefits</p>
+    <p style="color: #F7302F; font-family: Amaranth; font-size: 26px;">Professional Benefits</p>
     <p>
         Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
-        As a member of PGC (Professional Greek Council) we have access to unique opportunities to help build up a strong
+        As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
         professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
         STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
-        still in school for companies such as J.P. Morgan, Citi, Cognizant, UTC, DealerTrack, and Goldman Sachs. Graduating
-        members have went on to work full-time positions for companies such as Intel, Deusche Bank, Cummins, Johnson & Johnson,
+        still in school for companies such as <strong>J.P. Morgan, Citi, Cognizant, UTC, DealerTrack, and Goldman Sachs.</strong> Graduating
+        members have went on to work full-time positions for companies such as <strong>Intel, Deusche Bank, Cummins, Johnson & Johnson</strong>,
         and many more.
 
         <!-- Insert part about encouraged to view alumni testimonies, stop before it is common." -->
 
         Often time alumni members who have went on to great professional standing in various companies and fields help
-        secure internships and positions offering them exclusively to members of Sigma Phi Delta. In the modern competitive
+        secure <strong>internships and positions offering them exclusively to members of Sigma Phi Delta</strong>. In the modern competitive
         job market, who you know is just as important as what you know.
     </p>
 
-    <p style="color: #F7302F; font-family: Amaranth; font-size: 22px;">Social Benefits</p>
+    <p style="color: #F7302F; font-family: Amaranth; font-size: 26px;">Social Benefits</p>
     <p>
         While we highly hold the beliefs of strong academics and profession success we also fully understand the importance
         of experiencing the social opportunities university has to offer, as we are only here for so long. Sigma Phi Delta
-        engages in a broad spectrum of social activities such as intramural sports, collaborated events, and participation
-        in various campus events such as tailgates and campus life time. We also maintain strong relations with other Fraternities,
-        Sororities, and various organizations on campus encouraging a stronger sense of community and good spirit.
+        engages in a broad spectrum of social activities such as <strong>intramural sports, collaborated events, tailgates</strong>, and participation
+        in various campus events at campus life time. We also maintain strong relations with other Fraternities,
+        Sororities, and various organizations on campus encouraging a <strong>stronger sense of community and good spirit</strong>.
     </p>
 
-    <p style="color: #F7302F; font-family: Amaranth; font-size: 22px;">Brotherhood</p>
-    <p>The most important aspect of Sigma Phi Delta; however, is its close-knit, diverse brotherhood. The men of Sigma Phi
+    <p style="color: #F7302F; font-family: Amaranth; font-size: 26px;">Brotherhood</p>
+    <p>The most important aspect of Sigma Phi Delta; however, is its <strong>close-knit, diverse brotherhood</strong>. The men of Sigma Phi
         Delta come from all corners of the country, as well as different areas of the world. Being a member of Sigma Phi
-        Delta not only gives you people to study and hang out with, but gives you friendships that last a lifetime. Being a
-        member of Sigma Phi Delta not only alters a man's college experience, but also positively affects the rest of their life.</p>
+        Delta not only gives you people to study and hang out with, but gives you <strong>friendships that last a lifetime</strong></p>
+
+    <p>Being a member of Sigma Phi Delta not only alters a man's college experience, but also positively affects the rest of their life.</p>
+    <div style="height: 30px;"></div>
 
 </div>
 
