Spacing for rush page finished, alternating the circles

--- a/rush.html
+++ b/rush.html
@@ -54,16 +54,17 @@
     , and what we stand for.</p>
     </div>
 
+    <!-- Academic Benefits -->
     <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
             <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="icons/academics.png" height="150px" width="150px" class="block centerDiv"/>
-                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;">Academic Benefits</div>
+                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Academic Benefits</div>
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop" style="padding-left: 30px;width: 70%; line-height: 24px;">
+        <div class="inlineBlock vertAlignTop" style="padding-left: 30px;width: 70%; line-height: 26px;">
             No one can truly understand the full perils and workload of a major except those within the major. The members of
             Sigma Phi Delta are all within CEAS (College of Engineering and Applied Sciences), covering a solid breathe of its
             encompassing majors. Members benefit from working along side one another <strong>garnering homework help, study aid, advice
@@ -74,38 +75,70 @@
         </div>
     </div>
 
-    <p style="color: #F7302F; font-family: Amaranth; font-size: 26px;">Professional Benefits</p>
-    <p>
-        Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
-        As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
-        professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
-        STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
-        still in school for companies such as <strong>J.P. Morgan, Citi, Cognizant, UTC, DealerTrack, and Goldman Sachs.</strong> Graduating
-        members have went on to work full-time positions for companies such as <strong>Intel, Deusche Bank, Cummins, Johnson & Johnson</strong>,
-        and many more.
+    <!-- Professional Benefits -->
+    <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
+        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
+            <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+                <div>
+                    <img src="icons/professional5.png" height="150px" width="150px" class="block centerDiv"/>
+                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Professional Benefits</div>
+                </div>
+            </div>
+        </div>
+        <div class="inlineBlock vertAlignTop" style="padding-left: 30px;width: 70%; line-height: 28px;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
+            As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
+            professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
+            STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
+            still in school for companies such as <strong>J.P. Morgan, Citi, Cognizant, UTC, DealerTrack, and Goldman Sachs.</strong> Graduating
+            members have went on to work full-time positions for companies such as <strong>Intel, Deusche Bank, Cummins, Johnson & Johnson</strong>,
+            and many more.
 
-        <!-- Insert part about encouraged to view alumni testimonies, stop before it is common." -->
+            <!-- Insert part about encouraged to view alumni testimonies, stop before it is common."
 
-        Often time alumni members who have went on to great professional standing in various companies and fields help
-        secure <strong>internships and positions offering them exclusively to members of Sigma Phi Delta</strong>. In the modern competitive
-        job market, who you know is just as important as what you know.
-    </p>
+            Often time alumni members who have went on to great professional standing in various companies and fields help
+            secure <strong>internships and positions offering them exclusively to members of Sigma Phi Delta</strong>. In the modern competitive
+            job market, who you know is just as important as what you know.-->
+        </div>
+    </div>
 
-    <p style="color: #F7302F; font-family: Amaranth; font-size: 26px;">Social Benefits</p>
-    <p>
-        While we highly hold the beliefs of strong academics and profession success we also fully understand the importance
-        of experiencing the social opportunities university has to offer, as we are only here for so long. Sigma Phi Delta
-        engages in a broad spectrum of social activities such as <strong>intramural sports, collaborated events, tailgates</strong>, and participation
-        in various campus events at campus life time. We also maintain strong relations with other Fraternities,
-        Sororities, and various organizations on campus encouraging a <strong>stronger sense of community and good spirit</strong>.
-    </p>
 
-    <p style="color: #F7302F; font-family: Amaranth; font-size: 26px;">Brotherhood</p>
-    <p>The most important aspect of Sigma Phi Delta; however, is its <strong>close-knit, diverse brotherhood</strong>. The men of Sigma Phi
-        Delta come from all corners of the country, as well as different areas of the world. Being a member of Sigma Phi
-        Delta not only gives you people to study and hang out with, but gives you <strong>friendships that last a lifetime</strong></p>
+    <!-- Social Benefits -->
+    <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
+        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
+            <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+                <div>
+                    <img src="icons/crowd.png" height="150px" width="150px" class="block centerDiv"/>
+                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Social Benefits</div>
+                </div>
+            </div>
+        </div>
+        <div class="inlineBlock vertAlignTop" style="padding-left: 30px;width: 70%; line-height: 28px;">
+            While we highly hold the beliefs of strong academics and profession success we also fully understand the importance
+            of experiencing the social opportunities university has to offer, as we are only here for so long. Sigma Phi Delta
+            engages in a broad spectrum of social activities such as <strong>intramural sports, collaborated events, tailgates</strong>, and participation
+            in various campus events at campus life time. We also maintain strong relations with other Fraternities,
+            Sororities, and various organizations on campus encouraging a <strong>stronger sense of community and good spirit</strong>.
+        </div>
+    </div>
 
-    <p>Being a member of Sigma Phi Delta not only alters a man's college experience, but also positively affects the rest of their life.</p>
+    <!-- Social Benefits -->
+    <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
+        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
+            <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+                <div>
+                    <img src="images/symbols/spdgearlogo.png" height="175px" width="150px" class="block centerDiv"/>
+                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Social Benefits</div>
+                </div>
+            </div>
+        </div>
+        <div class="inlineBlock vertAlignTop" style="padding-left: 30px;width: 70%; line-height: 28px;">
+            The most important aspect of Sigma Phi Delta; however, is its <strong>close-knit, diverse brotherhood</strong>. The men of Sigma Phi
+                Delta come from all corners of the country, as well as different areas of the world. Being a member of Sigma Phi
+                Delta not only gives you people to study and hang out with, but gives you <strong>friendships that last a lifetime</strong>
+
+            Being a member of Sigma Phi Delta not only alters a man's college experience, but also positively affects the rest of their life.
+        </div>
+    </div>
     <div style="height: 30px;"></div>
 
 </div>
