Rush page finished, going back to members and adding special js thing

--- a/rush.html
+++ b/rush.html
@@ -23,7 +23,7 @@
 
     <style>
         strong{
-            color: #767676;
+            color: #DB2B2A;
             font-weight:normal;
         }
     </style>
@@ -41,7 +41,7 @@
     <div class="inlineBlock" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 15px 0;">Why rush Sigma Phi Delta?</div>
 
     <!-- List of Rush Events -->
-    <div class="shadow inlineBlock floatRight vertAlignTop" style="margin-top:30px; width: 500px; height: 330px; margin-left: 25px; text-align: left; padding: 0; border: 5px solid #191919;">
+    <div class="shadow inlineBlock floatRight vertAlignTop" style="margin-top:30px; width: 500px; height: 300px; margin-left: 25px; text-align: left; padding: 0; border: 5px solid #191919;">
         <!-- Rush Flier -->
         <img src="images/symbols/spdrush2016n.png" height="100%" width="100%"/>
     </div>
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop" style="padding-left: 30px;width: 70%; line-height: 26px;">
+        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%; line-height: 26px;">
             No one can truly understand the full perils and workload of a major except those within the major. The members of
             Sigma Phi Delta are all within CEAS (College of Engineering and Applied Sciences), covering a solid breathe of its
             encompassing majors. Members benefit from working along side one another <strong>garnering homework help, study aid, advice
@@ -77,15 +77,7 @@
 
     <!-- Professional Benefits -->
     <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
-        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
-                <div>
-                    <img src="icons/professional5.png" height="150px" width="150px" class="block centerDiv"/>
-                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Professional Benefits</div>
-                </div>
-            </div>
-        </div>
-        <div class="inlineBlock vertAlignTop" style="padding-left: 30px;width: 70%; line-height: 28px;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
+        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%; line-height: 28px;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
             As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
             professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
             STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
@@ -98,6 +90,14 @@
             Often time alumni members who have went on to great professional standing in various companies and fields help
             secure <strong>internships and positions offering them exclusively to members of Sigma Phi Delta</strong>. In the modern competitive
             job market, who you know is just as important as what you know.-->
+        </div>
+        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
+            <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+                <div>
+                    <img src="icons/professional5.png" height="150px" width="150px" class="block centerDiv"/>
+                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Professional Benefits</div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -112,7 +112,7 @@
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop" style="padding-left: 30px;width: 70%; line-height: 28px;">
+        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%; line-height: 28px;">
             While we highly hold the beliefs of strong academics and profession success we also fully understand the importance
             of experiencing the social opportunities university has to offer, as we are only here for so long. Sigma Phi Delta
             engages in a broad spectrum of social activities such as <strong>intramural sports, collaborated events, tailgates</strong>, and participation
@@ -121,8 +121,15 @@
         </div>
     </div>
 
-    <!-- Social Benefits -->
+    <!-- Brotherhood -->
     <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
+        <div class="inlineBlock vertAlignTop" style="padding: 0 25px;width: 70%; line-height: 28px;">
+            The most important aspect of Sigma Phi Delta; however, is its <strong>close-knit, diverse brotherhood</strong>. The men of Sigma Phi
+                Delta come from all corners of the country, as well as different areas of the world. Being a member of Sigma Phi
+                Delta not only gives you people to study and hang out with, but gives you <strong>friendships that last a lifetime</strong>
+
+            Being a member of Sigma Phi Delta not only alters a man's college experience, but also positively affects the rest of their life.
+        </div>
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
             <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
                 <div>
@@ -130,13 +137,6 @@
                     <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Social Benefits</div>
                 </div>
             </div>
-        </div>
-        <div class="inlineBlock vertAlignTop" style="padding-left: 30px;width: 70%; line-height: 28px;">
-            The most important aspect of Sigma Phi Delta; however, is its <strong>close-knit, diverse brotherhood</strong>. The men of Sigma Phi
-                Delta come from all corners of the country, as well as different areas of the world. Being a member of Sigma Phi
-                Delta not only gives you people to study and hang out with, but gives you <strong>friendships that last a lifetime</strong>
-
-            Being a member of Sigma Phi Delta not only alters a man's college experience, but also positively affects the rest of their life.
         </div>
     </div>
     <div style="height: 30px;"></div>
